build(jpackage): 更新构建脚本